<resources>
    <string name="lang">en</string>
    <string name="dir">ltr</string>
    <string name="about_us">About us</string>
    <string name="no_app_found_to_handle">No app found to handle this action</string>
    <string name="unsupported_data">Unsupported data</string>
    <string name="app_share">App share</string>
    <string name="browser_share">Browser share</string>
    <string name="share">Share</string>
    <string name="add_apps">Add apps</string>
    <string name="add_files">Add files</string>
    <string name="selected">Selected</string>
    <string name="link">Link</string>
    <string name="users">Users</string>
    <string name="sending_to_user">Sending to %1$s</string>
    <string name="sending_to_user_stopped">Sending to %1$s stopped</string>
    <string name="sending_to_user_done">Sent to %1$s in %2$s</string>
    <string name="receiving_from_user">Receiving from %1$s</string>
    <string name="receiving_from_user_stopped">Receiving from %1$s stopped</string>
    <string name="receiving_from_user_done">Received from %1$s in %2$s</string>
    <string name="completed">Completed</string>
    <string name="stopped">Stopped</string>
    <string name="stop">Stop</string>
    <string name="days">%d days</string>
    <string name="hours">%d hours</string>
    <string name="minutes">%d minutes</string>
    <string name="seconds">%d seconds</string>
    <string name="milliSeconds">%d milliseconds</string>
    <string name="server_off">Server is off</string>
    <string name="server_on">Server is running</string>
    <string name="view_https_certificate">view cert</string>
    <string name="connected_users">Connected users</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="user_default_name">User %1$d</string>
    <string name="choose_language">Choose language</string>
    <string name="no_user_connected">No users connected</string>
    <string name="no_files_selected">No files selected</string>
    <string name="encryption_dialog_title">Do you want HTTPS?</string>
    <string name="encryption_dialog_details">You can enable HTTPS to ensure that the traffic is encrypted.\nThis app uses a self-signed certificate generated randomly the first time you toggle on the server.\nThe browser will show you a warning about the certificate because it can\'t verify that the certificate came from you.\nYou can still verify the certificate manually by comparing the certificate SHA256 fingerprint in the browser and the app</string>
    <string name="dont_show_again">Don\'t show this message again</string>
    <string name="fast_share">Fast share</string>
    <string name="min_value_error">The minimum value is %d</string>
    <string name="max_value_error">The maximum value is %d</string>
    <string name="toggle_dark_mode">Toggle dark mode</string>
    <string name="change_server_port">Set server port</string>
    <string name="change_server_port_desc">Set the port to which the server listens to. Use this setting when the server is not turning on.</string>
    <string name="enable_https">Enable HTTPS</string>
    <string name="enable_https_desc">Enable HTTPS to encrypt files transfer. It uses self-signed certificate so browser will show warning about it. You can still verify the cert manually by viewing the SHA256 fingerprint</string>
    <string name="disable_browser_upload">Disable uploading from browsers</string>
    <string name="disable_browser_upload_desc">Prevent web browsers from sending files to your device.</string>
    <string name="block_users">Block connected users</string>
    <string name="block_users_desc">Block users once they are connected to your device.</string>
    <string name="language">Languages</string>
    <string name="languages_desc">Change app language</string>
    <string name="system_default_lang">System default</string>
    <string name="debug_mode">Debug Mode</string>
    <string name="debug_mode_desc">displays some errors it when occurs</string>
    <string name="set_number">Set number</string>
    <string name="server_port">Server port</string>
    <string name="port">port</string>
    <string name="loading_apps">Loading Apps…</string>
    <string name="select_apps">Select Apps</string>
    <string name="selected_num">Selected %1$d</string>
    <string name="splits">splits</string>
    <string name="select_files">Select files</string>
    <string name="folder_is_empty">This folder is empty</string>
    <string name="internal_storage">Internal storage</string>
    <string name="file_type">%1$s file</string>
    <string name="permission_denied">Permission denied</string>
    <string name="search">Search</string>
    <string name="recent">recent</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audio">Audio</string>
    <string name="documents">Documents</string>
    <string name="no_files_found">No files were found</string>
    <string name="apks_installer_experimental">APKS Installer (Experimental)</string>
    <string name="apks_installer">APKS installer</string>
    <string name="pls_choose_apks">Please choose an APKS file</string>
    <string name="pick_apks_file">Pick an APKS file</string>
    <string name="installer_note">After sending an APKS file to the other device and sending this app to the other remote device and opening this page to install the APKS file.</string>
    <string name="initialising">Initialising...</string>
    <string name="installing">Installing …</string>
    <string name="extracting_x">Extracting %1$s …</string>
    <string name="extracting_done">Extracting done</string>
    <string name="package_installed_success">Package installed</string>
    <string name="failed">Failed</string>
    <string name="please_choose_a_file">Please share a file</string>
    <string name="changelog">Changelog</string>
    <string name="new_in_version">New in %s</string>
    <string name="_continue">Continue</string>
    <string name="messages">Messages</string>
    <string name="send_message">Send message</string>
    <string name="enter_message">Enter message</string>
    <string name="downloads">Downloads</string>
    <string name="no_downloads">No downloads available</string>
    <string name="download_all">Download all</string>
    <string name="app_name">sharing</string>
    <string name="settings">Settings</string>
    <string name="done">done</string>
    <string name="ok">OK</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="svr_running">Server is running</string>
    <string name="svr_notification_message">Server is up on address %1$s:%2$s and accepts new requests</string>
    <string name="app_icon_acc_desc">App icon</string>
    <string name="tutorial">Tutorial</string>
    <string name="connect_to_wifi_or_hotspot">Please activate Wi-Fi or hotspot to start sharing</string>
    <string name="toggle_on_the_server">Please turn on the server first</string>
    <string name="select">Select</string>
    <string name="sort_by">Sort by…</string>
    <string name="show_drop_down">Show dropdown menu</string>
    <string name="back">Back</string>
    <string name="no_web_browser_found">No web browser found</string>
    <string name="remove">Remove</string>
    <string name="no_data_attached">No data specified</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="error_no_files_added">No files were added to download</string>
    <string-array name="lang_codes" translatable="false">
        <item>ar</item>
        <item>en</item>
        <item>du</item>
        <item>zh-CN</item>
        <item>fr</item>
        <item>es</item>
        <item>nb-NO</item>
    </string-array>
    <string-array name="lang_names_original" translatable="false">
        <item>العربية</item>
        <item>English</item>
        <item>Deutsch</item>
        <item>中文简体</item>
        <item>Français</item>
        <item>Espagnol</item>
        <item>Norsk bokmål</item>
    </string-array>
    <string-array name="lang_names_translated" translatable="false">
        <item>@string/arabic</item>
        <item>@string/english</item>
        <item>@string/german</item>
        <item>@string/chinese_simplified</item>
        <item>@string/french</item>
        <item>@string/spanish</item>
        <item>@string/norwegian</item>
    </string-array>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="chinese_simplified">Chinese (simplified)</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="norwegian">Norwegian</string>
    <string name="server_port_changed">Server port is now %d</string>
    <string name="browse_internal_storage">Add files</string>
    <string name="browse_internal_storage_desc">Add files using android files app</string>
    <string name="browse_internal_storage_builtin">Add files builtin</string>
    <string name="browse_internal_storage_desc_builtin">Add files using builtin files browser\n</string>
    <string name="browse_sd_card_builtin">Add files from %s</string>
    <string name="browse_sd_card_builtin_desc">Add files from SD card using builtin files browser</string>
    <string name="files">Files</string>
    <string name="apps">Apps</string>
    <string name="add_items">Add items</string>
    <string name="stream_camera">stream camera</string>
    <string name="stream_screen">stream screen</string>
    <string name="stream_audio">stream audio</string>
    <string name="streaming">Streaming</string>
    <string name="camera_permission_title">Camera Permission</string>
    <string name="camera_permission_explanation">We need camera permission to stream video from your camera to the other device</string>
    <string name="record_audio_permission_title">Record audio permission</string>
    <string name="record_audio_permission_explanation">We need permission to access your mic to stream audio to the other device.</string>
    <string name="screenshots">Screen shots</string>
    <string name="camera">Camera</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="folder_doesnt_exist">Folder doesn\'t exist</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cert_info_title">Certificate info</string>
    <string name="sha256_fingerprint">SHA256 fingerprint:</string>
    <string name="certificate">Certificate</string>
    <string name="public_key">Public key</string>
    <string name="discover_devices">Discover devices</string>
    <string name="listen_to_devices">Listen to devices</string>
    <string name="communicate_with_devices">Communicate with devices</string>
    <string translatable="false" name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_listener_qr_code">Scan The QR Code if your device was not discovered.\nIt\'s more secure to scan the above QR Code even if your device was discovered.</string>
    <string name="send_request">Send request</string>
    <string name="resolution">Video resolution</string>
    <string name="framerate">framerate</string>
    <string name="microphone">microphone</string>
    <string name="video_source">video source</string>
    <string name="rear_camera">Rear camera</string>
    <string name="front_camera">Front camera</string>
    <string name="cert_not_created">The certificate has not been created yet. start the server to create one.</string>
</resources>