<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.ammar.sharing.custom.ui.AdaptiveTextView
        android:id="@+id/TV_DialogEncryptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/encryption_dialog_title"
        android:textSize="24sp" />

    <com.ammar.sharing.custom.ui.AdaptiveTextView
        android:id="@+id/TV_DialogEncryptionDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="600dp"
        android:text="@string/encryption_dialog_details"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV_DialogEncryptionTitle" />

    <android.widget.Button
        android:id="@+id/B_EncryptionYESButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_ok_bg"
        android:text="@string/yes"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TV_DialogEncryptionDetails" />

    <android.widget.Button
        android:id="@+id/B_EncryptionNOButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_ok_bg"
        android:text="@string/no"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@id/B_EncryptionYESButton"
        app:layout_constraintTop_toTopOf="@id/B_EncryptionYESButton"
        app:layout_constraintBottom_toBottomOf="@id/B_EncryptionYESButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>