<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@drawable/gradient_background_dark">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/B_StreamCamera"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:text="@string/stream_camera"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold"
            app:cornerRadius="25dp"
            app:icon="@drawable/ic_camera"
            app:iconTint="@color/purple" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/B_StreamScreen"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:text="@string/stream_screen"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold"
            app:cornerRadius="25dp"
            app:icon="@drawable/ic_mobile_screen_share"
            app:iconTint="@color/purple" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/B_StreamAudio"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:text="@string/stream_audio"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold"
            app:cornerRadius="25dp"
            app:icon="@drawable/ic_mic"
            app:iconTint="@color/purple" />

    </LinearLayout>
</LinearLayout>