<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp">

    <com.ammar.sharing.custom.ui.AdaptiveTextView
        android:id="@+id/TV_DialogCertInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cert_info_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:stretchColumns="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TV_DialogCertInfoTitle">

        <TableRow>

            <com.ammar.sharing.custom.ui.AdaptiveTextView
                android:id="@+id/TV_SHA256FingerprintTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/sha256_fingerprint" />
        </TableRow>

        <TableRow>

            <com.ammar.sharing.custom.ui.AdaptiveTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/certificate"
                android:textAlignment="viewStart" />

            <com.ammar.sharing.custom.ui.AdaptiveTextView
                android:id="@+id/TV_CertSHA256Fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                tools:text="Ammar Ramadan is someone cool and good and this text layout is annoying" />
        </TableRow>

        <TableRow>

            <com.ammar.sharing.custom.ui.AdaptiveTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_key"
                android:textAlignment="viewStart" />

            <com.ammar.sharing.custom.ui.AdaptiveTextView
                android:id="@+id/TV_PublicKeySHA256Fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                tools:text="Ammar Ramadan is someone cool and good and this text layout is annoying" />
        </TableRow>
    </TableLayout>

    <android.widget.Button
        android:id="@+id/B_CertInfoOkButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/button_ok_bg"
        android:text="@android:string/ok"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>